base/cart/security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartservice
  namespace: cartservice
spec:
  podSelector:
    matchLabels:
      app: cartservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: checkoutservice
      ports:
        - port: 7070
          protocol: TCP
  egress:
    - {}
